--- a/docs/modules/onecx-iam-svc/pages/onecx-iam-svc.adoc
+++ b/docs/modules/onecx-iam-svc/pages/onecx-iam-svc.adoc
@@ -1,4 +1,3 @@
-:summaryTableId: onecx-iam-svc
 [.configuration-legend]
 icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
 [.configuration-reference.searchable, cols="80,.^10,.^10"]
@@ -9,6 +8,10 @@ h|Type
 h|Default
 
 a| [[onecx-iam-svc_onecx-iam-keycloaks-keycloaks-display-name]] [.property-path]##link:#onecx-iam-svc_onecx-iam-keycloaks-keycloaks-display-name[`onecx.iam.keycloaks."keycloaks".display-name`]##
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++onecx.iam.keycloaks."keycloaks".display-name+++[]
+endif::add-copy-button-to-config-props[]
+
 
 [.description]
 --
@@ -26,6 +29,10 @@ endif::add-copy-button-to-env-var[]
 |required icon:exclamation-circle[title=Configuration property is required]
 
 a| [[onecx-iam-svc_onecx-iam-keycloaks-keycloaks-description]] [.property-path]##link:#onecx-iam-svc_onecx-iam-keycloaks-keycloaks-description[`onecx.iam.keycloaks."keycloaks".description`]##
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++onecx.iam.keycloaks."keycloaks".description+++[]
+endif::add-copy-button-to-config-props[]
+
 
 [.description]
 --
@@ -43,6 +50,10 @@ endif::add-copy-button-to-env-var[]
 |
 
 a| [[onecx-iam-svc_onecx-iam-keycloaks-keycloaks-url]] [.property-path]##link:#onecx-iam-svc_onecx-iam-keycloaks-keycloaks-url[`onecx.iam.keycloaks."keycloaks".url`]##
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++onecx.iam.keycloaks."keycloaks".url+++[]
+endif::add-copy-button-to-config-props[]
+
 
 [.description]
 --
@@ -60,6 +71,10 @@ endif::add-copy-button-to-env-var[]
 |required icon:exclamation-circle[title=Configuration property is required]
 
 a| [[onecx-iam-svc_onecx-iam-keycloaks-keycloaks-issuerhost]] [.property-path]##link:#onecx-iam-svc_onecx-iam-keycloaks-keycloaks-issuerhost[`onecx.iam.keycloaks."keycloaks".issuerHost`]##
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++onecx.iam.keycloaks."keycloaks".issuerHost+++[]
+endif::add-copy-button-to-config-props[]
+
 
 [.description]
 --
@@ -77,6 +92,10 @@ endif::add-copy-button-to-env-var[]
 |required icon:exclamation-circle[title=Configuration property is required]
 
 a| [[onecx-iam-svc_onecx-iam-keycloaks-keycloaks-realm]] [.property-path]##link:#onecx-iam-svc_onecx-iam-keycloaks-keycloaks-realm[`onecx.iam.keycloaks."keycloaks".realm`]##
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++onecx.iam.keycloaks."keycloaks".realm+++[]
+endif::add-copy-button-to-config-props[]
+
 
 [.description]
 --
@@ -94,6 +113,10 @@ endif::add-copy-button-to-env-var[]
 |required icon:exclamation-circle[title=Configuration property is required]
 
 a| [[onecx-iam-svc_onecx-iam-keycloaks-keycloaks-client]] [.property-path]##link:#onecx-iam-svc_onecx-iam-keycloaks-keycloaks-client[`onecx.iam.keycloaks."keycloaks".client`]##
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++onecx.iam.keycloaks."keycloaks".client+++[]
+endif::add-copy-button-to-config-props[]
+
 
 [.description]
 --
@@ -111,6 +134,10 @@ endif::add-copy-button-to-env-var[]
 |required icon:exclamation-circle[title=Configuration property is required]
 
 a| [[onecx-iam-svc_onecx-iam-keycloaks-keycloaks-secret]] [.property-path]##link:#onecx-iam-svc_onecx-iam-keycloaks-keycloaks-secret[`onecx.iam.keycloaks."keycloaks".secret`]##
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++onecx.iam.keycloaks."keycloaks".secret+++[]
+endif::add-copy-button-to-config-props[]
+
 
 [.description]
 --
@@ -128,6 +155,10 @@ endif::add-copy-button-to-env-var[]
 |required icon:exclamation-circle[title=Configuration property is required]
 
 a| [[onecx-iam-svc_onecx-iam-keycloaks-keycloaks-username]] [.property-path]##link:#onecx-iam-svc_onecx-iam-keycloaks-keycloaks-username[`onecx.iam.keycloaks."keycloaks".username`]##
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++onecx.iam.keycloaks."keycloaks".username+++[]
+endif::add-copy-button-to-config-props[]
+
 
 [.description]
 --
@@ -145,6 +176,10 @@ endif::add-copy-button-to-env-var[]
 |required icon:exclamation-circle[title=Configuration property is required]
 
 a| [[onecx-iam-svc_onecx-iam-keycloaks-keycloaks-password]] [.property-path]##link:#onecx-iam-svc_onecx-iam-keycloaks-keycloaks-password[`onecx.iam.keycloaks."keycloaks".password`]##
+ifdef::add-copy-button-to-config-props[]
+config_property_copy_button:+++onecx.iam.keycloaks."keycloaks".password+++[]
+endif::add-copy-button-to-config-props[]
+
 
 [.description]
 --
@@ -163,5 +198,3 @@ endif::add-copy-button-to-env-var[]
 
 |===
 
-
-:!summaryTableId:
