fix: use sl4j logger

--- a/docs/modules/onecx-iam-svc/pages/onecx-iam-svc-docs.adoc
+++ b/docs/modules/onecx-iam-svc/pages/onecx-iam-svc-docs.adoc
@@ -40,13 +40,15 @@ Default values
 [source,yaml]
 ----
 app:
-  name: iam-svc
+  name: svc
   image:
     repository: "onecx/onecx-iam-svc"
   db:
     enabled: false
 
 ----
+
+--
 
   db:
     enabled: false
