docs: rebuilded docs

--- a/docs/modules/onecx-iam-svc/partials/nav.adoc
+++ b/docs/modules/onecx-iam-svc/partials/nav.adoc
@@ -1,3 +1,2 @@
-** xref:documentation:onecx-iam-svc:index.adoc[IAM Service]
-*** External API(s)
-**** xref:documentation:onecx-iam-svc:openapi/onecx-iam-svc-v1.adoc[IAM  Management V1]
+** xref:documentation:onecx-iam-svc:index.adoc[Backend Service]
+*** xref:documentation:onecx-iam-svc:openapi/onecx-iam-svc-v1.adoc[OpenAPI v1]
