--- a/docs/modules/onecx-iam-svc/pages/onecx-iam-svc-docs.adoc
+++ b/docs/modules/onecx-iam-svc/pages/onecx-iam-svc-docs.adoc
@@ -1,10 +1,12 @@
 
 include::onecx-iam-svc-attributes.adoc[opts=optional]
 
-=== Default properties
+{docker-registry}[Link to Docker registry]
+
+== Default properties
 
 .{properties-file}
-[%collapsible%open]
+[%collapsible]
 ====
 [source,properties,subs=attributes+]
 ----
@@ -21,22 +23,18 @@ keycloak.cors=true
 ----
 ====
 
-=== Extensions
-
+== Extensions
+.Extensions List
+[%collapsible]
+====
 include::onecx-iam-svc-extensions.adoc[opts=optional]
+====
 
-=== Container
+== Helm
 
-{docker-registry}[Docker registry]
+{helm-registry}[Link to Helm registry]
 
-
-=== Helm
-
-{helm-registry}[Helm registry]
-
-Default values
-
-.{helm-file}
+.Default values in {helm-file}
 [source,yaml]
 ----
 app:
@@ -47,4 +45,3 @@ app:
     enabled: false
 
 ----
-
